crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP040_0.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP040_0.py:5:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
  |
4 | # UP040
5 | x: typing.TypeAlias = int
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
6 | x: TypeAlias = int
  |
  = help: Use the `type` keyword

ℹ Unsafe fix
2 2 | from typing import TypeAlias
3 3 | 
4 4 | # UP040
5   |-x: typing.TypeAlias = int
  5 |+type x = int
6 6 | x: TypeAlias = int
7 7 | 
8 8 | # UP040 simple generic

UP040_0.py:6:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
  |
4 | # UP040
5 | x: typing.TypeAlias = int
6 | x: TypeAlias = int
  | ^^^^^^^^^^^^^^^^^^ UP040
7 |
8 | # UP040 simple generic
  |
  = help: Use the `type` keyword

ℹ Unsafe fix
3 3 | 
4 4 | # UP040
5 5 | x: typing.TypeAlias = int
6   |-x: TypeAlias = int
  6 |+type x = int
7 7 | 
8 8 | # UP040 simple generic
9 9 | T = typing.TypeVar["T"]

UP040_0.py:10:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
 8 | # UP040 simple generic
 9 | T = typing.TypeVar["T"]
10 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
11 |
12 | # UP040 call style generic
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
7  7  | 
8  8  | # UP040 simple generic
9  9  | T = typing.TypeVar["T"]
10    |-x: typing.TypeAlias = list[T]
   10 |+type x[T] = list[T]
11 11 | 
12 12 | # UP040 call style generic
13 13 | T = typing.TypeVar("T")

UP040_0.py:14:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
12 | # UP040 call style generic
13 | T = typing.TypeVar("T")
14 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
15 |
16 | # UP040 bounded generic
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
11 11 | 
12 12 | # UP040 call style generic
13 13 | T = typing.TypeVar("T")
14    |-x: typing.TypeAlias = list[T]
   14 |+type x[T] = list[T]
15 15 | 
16 16 | # UP040 bounded generic
17 17 | T = typing.TypeVar("T", bound=int)

UP040_0.py:18:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
16 | # UP040 bounded generic
17 | T = typing.TypeVar("T", bound=int)
18 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
19 |
20 | # UP040 constrained generic
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
15 15 | 
16 16 | # UP040 bounded generic
17 17 | T = typing.TypeVar("T", bound=int)
18    |-x: typing.TypeAlias = list[T]
   18 |+type x[T: int] = list[T]
19 19 | 
20 20 | # UP040 constrained generic
21 21 | T = typing.TypeVar("T", int, str)

UP040_0.py:22:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
20 | # UP040 constrained generic
21 | T = typing.TypeVar("T", int, str)
22 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
23 |
24 | # UP040 contravariant generic
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
19 19 | 
20 20 | # UP040 constrained generic
21 21 | T = typing.TypeVar("T", int, str)
22    |-x: typing.TypeAlias = list[T]
   22 |+type x[T: (int, str)] = list[T]
23 23 | 
24 24 | # UP040 contravariant generic
25 25 | T = typing.TypeVar("T", contravariant=True)

UP040_0.py:26:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
24 | # UP040 contravariant generic
25 | T = typing.TypeVar("T", contravariant=True)
26 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
27 |
28 | # UP040 covariant generic
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
23 23 | 
24 24 | # UP040 contravariant generic
25 25 | T = typing.TypeVar("T", contravariant=True)
26    |-x: typing.TypeAlias = list[T]
   26 |+type x[T] = list[T]
27 27 | 
28 28 | # UP040 covariant generic
29 29 | T = typing.TypeVar("T", covariant=True)

UP040_0.py:30:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
28 | # UP040 covariant generic
29 | T = typing.TypeVar("T", covariant=True)
30 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
31 |
32 | # UP040 in class scope
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
27 27 | 
28 28 | # UP040 covariant generic
29 29 | T = typing.TypeVar("T", covariant=True)
30    |-x: typing.TypeAlias = list[T]
   30 |+type x[T] = list[T]
31 31 | 
32 32 | # UP040 in class scope
33 33 | T = typing.TypeVar["T"]

UP040_0.py:36:5: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
34 | class Foo:
35 |     # reference to global variable
36 |     x: typing.TypeAlias = list[T]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
37 |
38 |     # reference to class variable
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
33 33 | T = typing.TypeVar["T"]
34 34 | class Foo:
35 35 |     # reference to global variable
36    |-    x: typing.TypeAlias = list[T]
   36 |+    type x[T] = list[T]
37 37 | 
38 38 |     # reference to class variable
39 39 |     TCLS = typing.TypeVar["TCLS"]

UP040_0.py:40:5: UP040 [*] Type alias `y` uses `TypeAlias` annotation instead of the `type` keyword
   |
38 |     # reference to class variable
39 |     TCLS = typing.TypeVar["TCLS"]
40 |     y: typing.TypeAlias = list[TCLS]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
41 |
42 | # UP040 won't add generics in fix
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
37 37 | 
38 38 |     # reference to class variable
39 39 |     TCLS = typing.TypeVar["TCLS"]
40    |-    y: typing.TypeAlias = list[TCLS]
   40 |+    type y[TCLS] = list[TCLS]
41 41 | 
42 42 | # UP040 won't add generics in fix
43 43 | T = typing.TypeVar(*args)

UP040_0.py:44:1: UP040 [*] Type alias `x` uses `TypeAlias` annotation instead of the `type` keyword
   |
42 | # UP040 won't add generics in fix
43 | T = typing.TypeVar(*args)
44 | x: typing.TypeAlias = list[T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
45 |
46 | # OK
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
41 41 | 
42 42 | # UP040 won't add generics in fix
43 43 | T = typing.TypeVar(*args)
44    |-x: typing.TypeAlias = list[T]
   44 |+type x = list[T]
45 45 | 
46 46 | # OK
47 47 | x: TypeAlias

UP040_0.py:53:1: UP040 [*] Type alias `Decorator` uses `TypeAlias` annotation instead of the `type` keyword
   |
51 | # type alias.
52 | T = typing.TypeVar["T"]
53 | Decorator: TypeAlias = typing.Callable[[T], T]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
   |
   = help: Use the `type` keyword

ℹ Unsafe fix
50 50 | # Ensure that "T" appears only once  in the type parameters for the modernized
51 51 | # type alias.
52 52 | T = typing.TypeVar["T"]
53    |-Decorator: TypeAlias = typing.Callable[[T], T]
   53 |+type Decorator[T] = typing.Callable[[T], T]
54 54 | 
55 55 | 
56 56 | from typing import TypeVar, Annotated, TypeAliasType

UP040_0.py:63:1: UP040 [*] Type alias `PositiveList` uses `TypeAliasType` assignment instead of the `type` keyword
   |
61 |   # https://github.com/astral-sh/ruff/issues/11422
62 |   T = TypeVar("T")
63 | / PositiveList = TypeAliasType(
64 | |     "PositiveList", list[Annotated[T, Gt(0)]], type_params=(T,)
65 | | )
   | |_^ UP040
66 |
67 |   # Bound
   |
   = help: Use the `type` keyword

ℹ Safe fix
60 60 | 
61 61 | # https://github.com/astral-sh/ruff/issues/11422
62 62 | T = TypeVar("T")
63    |-PositiveList = TypeAliasType(
64    |-    "PositiveList", list[Annotated[T, Gt(0)]], type_params=(T,)
65    |-)
   63 |+type PositiveList[T] = list[Annotated[T, Gt(0)]]
66 64 | 
67 65 | # Bound
68 66 | T = TypeVar("T", bound=SupportGt)

UP040_0.py:69:1: UP040 [*] Type alias `PositiveList` uses `TypeAliasType` assignment instead of the `type` keyword
   |
67 |   # Bound
68 |   T = TypeVar("T", bound=SupportGt)
69 | / PositiveList = TypeAliasType(
70 | |     "PositiveList", list[Annotated[T, Gt(0)]], type_params=(T,)
71 | | )
   | |_^ UP040
72 |
73 |   # Multiple bounds
   |
   = help: Use the `type` keyword

ℹ Safe fix
66 66 | 
67 67 | # Bound
68 68 | T = TypeVar("T", bound=SupportGt)
69    |-PositiveList = TypeAliasType(
70    |-    "PositiveList", list[Annotated[T, Gt(0)]], type_params=(T,)
71    |-)
   69 |+type PositiveList[T: SupportGt] = list[Annotated[T, Gt(0)]]
72 70 | 
73 71 | # Multiple bounds
74 72 | T1 = TypeVar("T1", bound=SupportGt)

UP040_0.py:77:1: UP040 [*] Type alias `Tuple3` uses `TypeAliasType` assignment instead of the `type` keyword
   |
75 | T2 = TypeVar("T2")
76 | T3 = TypeVar("T3")
77 | Tuple3 = TypeAliasType("Tuple3", tuple[T1, T2, T3], type_params=(T1, T2, T3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
78 |
79 | # No type_params
   |
   = help: Use the `type` keyword

ℹ Safe fix
74 74 | T1 = TypeVar("T1", bound=SupportGt)
75 75 | T2 = TypeVar("T2")
76 76 | T3 = TypeVar("T3")
77    |-Tuple3 = TypeAliasType("Tuple3", tuple[T1, T2, T3], type_params=(T1, T2, T3))
   77 |+type Tuple3[T1: SupportGt, T2, T3] = tuple[T1, T2, T3]
78 78 | 
79 79 | # No type_params
80 80 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)])

UP040_0.py:80:1: UP040 [*] Type alias `PositiveInt` uses `TypeAliasType` assignment instead of the `type` keyword
   |
79 | # No type_params
80 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)])
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
81 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)], type_params=())
   |
   = help: Use the `type` keyword

ℹ Safe fix
77 77 | Tuple3 = TypeAliasType("Tuple3", tuple[T1, T2, T3], type_params=(T1, T2, T3))
78 78 | 
79 79 | # No type_params
80    |-PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)])
   80 |+type PositiveInt = Annotated[int, Gt(0)]
81 81 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)], type_params=())
82 82 | 
83 83 | # OK: Other name

UP040_0.py:81:1: UP040 [*] Type alias `PositiveInt` uses `TypeAliasType` assignment instead of the `type` keyword
   |
79 | # No type_params
80 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)])
81 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)], type_params=())
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP040
82 |
83 | # OK: Other name
   |
   = help: Use the `type` keyword

ℹ Safe fix
78 78 | 
79 79 | # No type_params
80 80 | PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)])
81    |-PositiveInt = TypeAliasType("PositiveInt", Annotated[int, Gt(0)], type_params=())
   81 |+type PositiveInt = Annotated[int, Gt(0)]
82 82 | 
83 83 | # OK: Other name
84 84 | T = TypeVar("T", bound=SupportGt)
