crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP042.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP042 [*] Class A inherits from both `str` and `enum.Enum`
 --> UP042.py:4:7
  |
4 | class A(str, Enum): ...
  |       ^
help: Inherit from `enum.StrEnum`
  |
1 ~ from enum import Enum, StrEnum
2 |
3 |
4 ~ class A(StrEnum): ...
  |
note: This is an unsafe fix and may change runtime behavior

UP042 [*] Class B inherits from both `str` and `enum.Enum`
 --> UP042.py:7:7
  |
7 | class B(Enum, str): ...
  |       ^
help: Inherit from `enum.StrEnum`
  |
1 ~ from enum import Enum, StrEnum
2 |
…
6 |
7 ~ class B(StrEnum): ...
  |
note: This is an unsafe fix and may change runtime behavior

UP042 Class D inherits from both `str` and `enum.Enum`
  --> UP042.py:10:7
   |
10 | class D(int, str, Enum): ...
   |       ^
help: Inherit from `enum.StrEnum`

UP042 Class E inherits from both `str` and `enum.Enum`
  --> UP042.py:13:7
   |
13 | class E(str, int, Enum): ...
   |       ^
help: Inherit from `enum.StrEnum`
