crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP045_2.py_preview_with_fa100_and_future_annotations_py310.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP045 [*] Use `X | None` for type annotations
 --> UP045_2.py:5:10
  |
5 | def f(x: Optional[str]) -> None:
  |          ^^^^^^^^^^^^^
6 |     ...
  |
help: Convert to `X | None`
  |
5 - def f(x: Optional[str]) -> None:
5 + def f(x: str | None) -> None:
  |

UP045 [*] Use `X | None` for type annotations
  --> UP045_2.py:9:10
   |
 9 | def f(x: typing.Optional[str]) -> None:
   |          ^^^^^^^^^^^^^^^^^^^^
10 |     ...
   |
help: Convert to `X | None`
  |
9 - def f(x: typing.Optional[str]) -> None:
9 + def f(x: str | None) -> None:
  |
