crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP046_1.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP046 Generic class `BadStr` uses `Generic` subclass instead of type parameters
  --> UP046_1.py:11:14
   |
11 | class BadStr(Generic[AnyStr]):
   |              ^^^^^^^^^^^^^^^
   |
help: Use type parameters
